# server/api/api_datastreams.py
@@ -53,15 +53,13 @@ def datastreams_per_system(user_id, system_url):
 
     # 3) Fetch all datastreams that belong to the user with id user_id and system_name
     result_proxy = conn.execute(f"""
-    SELECT ds.system_name, client_name, shortname, ds.name, ds.datastream_uri, thing_name, thing.resource_uri, ca.submodel_element_collection,
+    SELECT ds.system_name, shortname, ds.name, thing_name, client_name, ds.resource_uri AS datastream_uri,
         creator.email AS contact_mail, ds.description
     FROM systems AS sys
     INNER JOIN is_admin_of_sys AS agf ON sys.name=agf.system_name 
-    INNER JOIN thing on sys.name = thing.system_name
-    INNER JOIN users as creator ON creator.id=thing.creator_id
-    INNER JOIN client_apps ca on sys.name = ca.system_name
     INNER JOIN datastreams ds on sys.name = ds.system_name
-    WHERE agf.user_id='{user_id}' AND thing.system_name='{system_name}';""")
+    INNER JOIN users as creator ON creator.id=datastreams.creator_id
+    WHERE agf.user_id='{user_id}' AND ds.system_name='{system_name}';""")
     engine.dispose()
     datastreams = [strip_dict(c.items()) for c in result_proxy.fetchall()]
 
@@ -102,15 +100,13 @@ def datastreams_per_client(user_id, system_url, client_name):
         return jsonify({"value": msg, "url": fct, "status_code": 403}), 403
 
     result_proxy = conn.execute(f"""
-    SELECT ds.system_name, client_name, shortname, ds.name, ds.datastream_uri, thing_name, thing.resource_uri, ca.submodel_element_collection,
+    SELECT ds.system_name, shortname, ds.name, thing_name, client_name, ds.resource_uri AS datastream_uri,
         creator.email AS contact_mail, ds.description
     FROM systems AS sys
     INNER JOIN is_admin_of_sys AS agf ON sys.name=agf.system_name 
-    INNER JOIN thing on sys.name = thing.system_name
-    INNER JOIN users as creator ON creator.id=thing.creator_id
-    INNER JOIN client_apps ca on sys.name = ca.system_name
     INNER JOIN datastreams ds on sys.name = ds.system_name
-    WHERE agf.user_id='{user_id}' AND ca.system_name='{system_name}' AND ca.name='{client_name}';""")
+    INNER JOIN users as creator ON creator.id=datastreams.creator_id
+    WHERE agf.user_id='{user_id}' AND ds.system_name='{system_name}' AND ds.client_name='{client_name}';""")
     engine.dispose()
     datastreams = [strip_dict(c.items()) for c in result_proxy.fetchall()]
 
@@ -151,15 +147,13 @@ def datastreams_per_thing(user_id, system_url, thing_name):
         return jsonify({"value": msg, "url": fct, "status_code": 403}), 403
 
     result_proxy = conn.execute(f"""
-    SELECT ds.system_name, client_name, shortname, ds.name, ds.datastream_uri, thing_name, thing.resource_uri, ca.submodel_element_collection,
+    SELECT ds.system_name, shortname, ds.name, thing_name, client_name, ds.resource_uri AS datastream_uri,
         creator.email AS contact_mail, ds.description
     FROM systems AS sys
     INNER JOIN is_admin_of_sys AS agf ON sys.name=agf.system_name 
-    INNER JOIN thing on sys.name = thing.system_name
-    INNER JOIN users as creator ON creator.id=thing.creator_id
-    INNER JOIN client_apps ca on sys.name = ca.system_name
     INNER JOIN datastreams ds on sys.name = ds.system_name
-    WHERE agf.user_id='{user_id}' AND thing.system_name='{system_name}' AND thing.name='{thing_name}';""")
+    INNER JOIN users as creator ON creator.id=datastreams.creator_id
+    WHERE agf.user_id='{user_id}' AND ds.system_name='{system_name}' AND things.name='{thing_name}';""")
     engine.dispose()
     datastreams = [strip_dict(c.items()) for c in result_proxy.fetchall()]
 
@@ -176,8 +170,8 @@ def create_datastreams(user_id, system_url):
             "name": "Air Temperature",
             "shortname": "temperature",
             "description": "Air temperature measured in the connected car 1",
-            "thing": "car",
-            "client_app": "car_1"
+            "thing_name": "car",
+            "client_name": "car_1"
         }
     ]
     :return: return an json with the new datastreams and metadata
@@ -192,7 +186,7 @@ def create_datastreams(user_id, system_url):
         return jsonify({"value": msg, "url": fct, "status_code": status_code}), status_code
 
     # 2) check if the client to create has the correct structure
-    req_keys = {"name", "shortname", "thing", "client_app"}
+    req_keys = {"name", "shortname", "thing_name", "client_name"}
     new_datastreams = request.json
 
     if not isinstance(new_datastreams, list):
@@ -223,35 +217,34 @@ def create_datastreams(user_id, system_url):
         return jsonify({"value": msg, "url": fct, "status_code": 403}), 403
 
     # 5) Load the existing datastreams of the system
-    all_client_apps = "'" + "','".join(tuple({ds["client_app"] for ds in new_datastreams})) + "'"
-    all_thing_conns = "'" + "','".join(tuple({ds["thing"] for ds in new_datastreams})) + "'"
+    all_client_apps = "'" + "','".join(tuple({ds["client_name"] for ds in new_datastreams})) + "'"
+    all_thing_conns = "'" + "','".join(tuple({ds["thing_name"] for ds in new_datastreams})) + "'"
 
     result_proxy = conn.execute(
-        f"SELECT DISTINCT ca.system_name, thing.name AS thing_name, ca.name AS client_name, ds.name, ds.shortname "
+        f"SELECT DISTINCT ca.system_name, thing_name, ca.name AS client_name, ds.name, ds.shortname "
         f"FROM datastreams AS ds "
-        f"INNER JOIN thing ON thing.name=ds.thing_name "
         f"INNER JOIN client_apps AS ca ON ca.name=ds.client_name "
-        f"WHERE ca.system_name='{system_name}' "
-        f"AND ca.name IN ({all_client_apps}) AND thing.name IN ({all_thing_conns});")
+        f"WHERE ca.system_name='{system_name}' AND ds.system_name='{system_name}'"
+        f"AND ca.name IN ({all_client_apps}) AND thing_name IN ({all_thing_conns});")
     existing_datastreams = [dict(c.items()) for c in result_proxy.fetchall()]
 
     new_ds = list()
     already_existing = list()
     for ds in new_datastreams:
         for ex_ds in existing_datastreams:
-            if ds["shortname"] == ex_ds["shortname"] and ds["client_app"] == ex_ds["client_name"] and \
-                    ds["thing"] == ex_ds["thing_name"]:
+            if ds["shortname"] == ex_ds["shortname"] and ds["client_name"] == ex_ds["client_name"] and \
+                    ds["thing_name"] == ex_ds["thing_name"]:
                 already_existing.append(ds["shortname"])
         new_ds.append({
-            "system_name": system_name,
-            "client_name": ds["client_app"],
             "shortname": ds["shortname"],
             "name": ds["name"],
-            "thing_system_name": system_name,
-            "thing_name": ds["thing"],
-            "description": ds.get("description", "")
-            # "creator_id": user_id,
-            # "datetime": get_datetime()
+            "system_name": system_name,
+            "thing_name": ds["thing_name"],
+            "client_name": ds["client_name"],
+            "client_system_name": system_name,
+            "description": ds.get("description", ""),
+            "creator_id": user_id,
+            "datetime": get_datetime()
         })
     # return jsonify({"thing_connections": existing_datastreams})
 
@@ -260,17 +253,16 @@ def create_datastreams(user_id, system_url):
         # If one of the exists and the method is POST, return without change. If the method is PUT, overwrite
         if request.method == "POST":
             engine.dispose()
-            msg = f"The datastreams '{already_existing}' for system '{system_name}' already exist, abort all."
+            msg = f"The datastreams '{already_existing}' for system '{system_name}' already exist, abort request."
             app.logger.warning(f"{fct}: {msg}")
             return jsonify({"value": msg, "url": fct, "status_code": 208}), 208
 
         else:  # PUT
             for ds in new_ds:
-                upsert_stmt = db.update(app.config["tables"]["datastreams"]).where(
-                    (app.config["tables"]["datastreams"].c.shortname == ds["shortname"] and
-                     app.config["tables"]["datastreams"].c.system_name == ds["system_name"])
-                ).values(ds)
-                conn.execute(upsert_stmt)
+                query = db.update(app.config["tables"]["datastreams"]).where(
+                    ("shortname" == ds["shortname"] and "thing_name" == ds["thing_name"] and
+                     "system_name" == ds["system_name"]))
+                conn.execute(query, ds)
 
     else:  # doesn't exist yet
         query = db.insert(app.config["tables"]["datastreams"])
